<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Piggy Bank</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="balance">Balance</string>
    <string name="add">Add</string>
    <string name="total">Total</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="delete">Delete</string>
    <string name="account">Account</string>
    <string name="assets">Assets</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="description">Comment</string>
    <string name="edit">Edit</string>
    <string name="draw">Draw</string>
    <string name="date">Date</string>
    <string name="action_settings">Settings</string>
    <string name="minus_symbol">-</string>
    <string name="search_hint">search transactions</string>
</resources>