<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/type_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="18dp"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/add_transaction_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/type_label"
        android:prompt="@string/type" />
    <TextView
        android:id="@+id/date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_transaction_type"
        android:text="@string/date"
        android:textSize="18sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/add_transaction_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_label"
        android:inputType="date"
        android:text="" />
    <TextView
        android:id="@+id/asset_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_transaction_date"
        android:text="@string/account"
        android:textSize="18sp"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/add_transaction_asset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/asset_label" />
    <TextView
        android:id="@+id/amount_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_transaction_asset"
        android:text="@string/amount"
        android:textSize="18sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/add_transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amount_label"
        android:hint="0.00"
        android:inputType="numberDecimal|numberSigned" />
    <TextView
        android:id="@+id/description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_transaction_amount"
        android:text="@string/description"
        android:textSize="18sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/add_transaction_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_label"
        android:hint="@string/description"
        android:inputType="text" />
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_transaction_description"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@android:string/cancel" />
        <Button
            android:id="@+id/delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deleteTransaction"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:visibility="gone" />
        <Button
            android:id="@+id/ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveTransaction"
            android:text="@android:string/ok" />
    </LinearLayout>
</RelativeLayout>