<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="fragment_transaction" >
    <!-- Overview panel -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_header"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance" />
            <EditText
                android:id="@+id/account_details_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:enabled="false"
                android:inputType="none"
                android:minWidth="100dp"
                android:textColor="@color/blue"
                android:textSize="13sp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".67"
            android:orientation="vertical" >
            <Button
                android:id="@+id/account_details_edit"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="0dp"
                android:text="@string/edit"
                android:textSize="12sp" />
            <Button
                android:id="@+id/account_details_draw"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/account_details_edit"
                android:padding="0dp"
                android:text="@string/draw"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
    <!-- Control panel -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_control_panel"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/account_details_from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:inputType="date"
                android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_symbol" />
            <EditText
                android:id="@+id/account_details_to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:inputType="date"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/account_details_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue" />
            <View
                android:layout_width="20dip"
                android:layout_height="2dp" />
            <TextView
                android:id="@+id/account_details_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red" />
        </LinearLayout>
    </RelativeLayout>
    <!-- List view -->
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:drawSelectorOnTop="false" />
</LinearLayout>